package revolve.msgs;
import "body.proto";

message Contact {
	required string collision1 = 1;
	required string collision2 = 2;
}

message BoundingBox {
	required double x = 1;
	required double y = 2;
	required double z = 3;
}

message BodyAnalysisResponse {
	required int32 id = 1;
	required bool success = 2;
	optional BoundingBox boundingBox = 3;
	repeated Contact contact = 4;
}